[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/background_title_screen.png" type="Texture" id=2]
[ext_resource path="res://TypingTarget.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Control" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.7

[node name="Control" type="Control" parent="Control"]
margin_right = 204.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="MenuButtons" type="VBoxContainer" parent="Control"]
visible = false
margin_top = 47.0
margin_right = 204.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGame" type="Button" parent="Control/MenuButtons"]
visible = false
margin_right = 204.0
margin_bottom = 20.0
text = "New Game"

[node name="Continue" type="Button" parent="Control/MenuButtons"]
visible = false
margin_right = 204.0
margin_bottom = 20.0
text = "Continue"

[node name="DevRoom" type="Button" parent="Control/MenuButtons"]
visible = false
margin_right = 204.0
margin_bottom = 20.0
text = "Dev Room"

[node name="Options" type="Button" parent="Control/MenuButtons"]
visible = false
margin_right = 204.0
margin_bottom = 20.0
text = "Options"

[node name="Exit" type="Button" parent="Control/MenuButtons"]
visible = false
margin_right = 204.0
margin_bottom = 20.0
text = "Exit Game"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 206.6
margin_top = 473.0
margin_right = 410.6
margin_bottom = 487.0
rect_scale = Vector2( 3, 3 )
text = "type start"
align = 1

[node name="Start" parent="." instance=ExtResource( 3 )]
position = Vector2( 528, 519 )
scale = Vector2( 3, 3 )
word = "start"
custom_hint = "type start"

[node name="Exit" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 872, 519 )
scale = Vector2( 3, 3 )
word = "exit"
custom_hint = "type exit"
